# gmap

./: CMakeLists.txt  Makefile  README.md  cuda-shell.nix  cuda-shell2.nix  docker-compose.yaml  flake.nix  shell.nix
exercises/: addition.cpp  first-cuda-program.cu  openmp-hello.cpp
src/: main.cu
